[gd_scene load_steps=3 format=3 uid="uid://b7tcrrhx851x2"]

[ext_resource type="Script" path="res://Src/userNameSubmit.gd" id="1_j2dx1"]
[ext_resource type="PackedScene" uid="uid://vqk4lob58wah" path="res://Scenes/MyButton.tscn" id="2_h2nwy"]

[node name="UserNameSubmit" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j2dx1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -116.0
offset_right = 125.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_type_variation = &"BannerPannel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Your UserName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Name"
alignment = 1

[node name="ConnectButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_h2nwy")]
layout_mode = 2
disabled = true
text = "Connect"

[node name="CancelButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_h2nwy")]
layout_mode = 2
text = "Cancel"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_onTextChanged"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_onTextSubmitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ConnectButton" to="." method="_onConnectPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CancelButton" to="." method="_onCancelPressed"]
